syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.huihui.grpc.zerocopy";
option java_outer_classname = "ZeroCopy";

package grpc;

service ZeroCopyService {
    rpc HeapCopy (stream ZeroCopyREQ) returns (stream ZeroCopyRES) {
    }
    rpc ZeroCopy (stream ZeroCopyREQ) returns (stream ZeroCopyRES) {
    }
}

message ZeroCopyREQ{
    bytes req = 1;
    EE e = 2;
}

enum EE{
    a = 0;
    b=3;
}

message ZeroCopyRES{
    bytes res = 2;
}